# Fluorence

./: .gitignore  CMakeLists.txt  LICENSE  README.md  compile_commands.json
Fluorence/: CMakeLists.txt
Fluorence/include/: Common.h  Fluorence.h
Fluorence/include/3D/: Camera.h  Model.h
Fluorence/include/Renderer/: Shader.h  Texture.h  VertexArray.h  VertexBuffer.h
Fluorence/src/: Fluorence.cpp
Fluorence/src/3D/: Camera.cpp  Model.cpp
Fluorence/src/Renderer/: Shader.cpp  Texture.cpp  VertexArray.cpp  VertexBuffer.cpp
Sandbox/: CMakeLists.txt
Sandbox/res/shaders/: fragment.glsl  vertex.glsl
Sandbox/src/: Main.cpp
